upgrade to Spring Boot 3.4.4